fix contributor settings title alignment

--- a/app/css/contributor.css
+++ b/app/css/contributor.css
@@ -102,3 +102,10 @@ body > div > :last-child {
   padding: 0 16px;
   text-align: right;
 }
+
+.contributor-preferences > :nth-child(52) {
+  grid-column: 1/2;
+  grid-row: 41/42;
+  padding: 0 16px;
+  text-align: right;
+}
